fix(PlayerInfo): increase icon size to 16px to prevent gauge icon clipping

--- a/src/components/Pages/PlayerProfile/PlayerProfileLayout/Panels/PlayerOverview/PlayerInfo/PlayerInfo.module.scss
+++ b/src/components/Pages/PlayerProfile/PlayerProfileLayout/Panels/PlayerOverview/PlayerInfo/PlayerInfo.module.scss
@@ -128,8 +128,8 @@
 }
 
 .overview .metaInfo>span>svg {
-  width: 15px;
-  height: 15px;
+  width: 16px;
+  height: 16px;
   color: #767c8a;
   flex-shrink: 0;
 }
